LDEV-4696 Migrate Assessment to Hibernate annotations